Fix schedule title align

--- a/src/components/schedule/schedule.module.css
+++ b/src/components/schedule/schedule.module.css
@@ -15,6 +15,9 @@
     color: var(--primary-color-3);
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.event .eventTitle a {
     display: flex;
     justify-content: center;
 }
